Add bounded RowData Nexmark benchmarks